--- a/project.html
+++ b/project.html
@@ -955,33 +955,33 @@
                 <div class="carousel">
                     <!-- Image Pair 1 -->
                     <div class="image-container">
-                        <img src="https://framerusercontent.com/images/G6siuhhNQSB2gaFkH6aMateuzc.jpeg" alt="Serene Skincare Product Display" class="img-front">
-                        <img src="https://framerusercontent.com/images/Dg5s46HOSjEmmegZTSjQWyHpP8.jpeg" alt="Skincare Close-Up" class="img-back">
+                        <img src="https://i.pinimg.com/1200x/66/4e/86/664e869da4e38ca3fd4b3806bc66e32d.jpg" alt="Serene Skincare Product Display" class="img-front">
+                        <img src="https://i.pinimg.com/736x/33/c0/9e/33c09e9cca3d93a2a2bcd02cf52d4494.jpg" alt="Skincare Close-Up" class="img-back">
                     </div>
                     <!-- Image Pair 2 -->
                     <div class="image-container">
-                        <img src="https://framerusercontent.com/images/VYYcAtDRIswXBd4zTCcu6rEzIg.jpeg" alt="Serene Minimalist Interior" class="img-front">
-                        <img src="https://framerusercontent.com/images/ss6OW8LWSmhlaaINuDE7e3bukmE.jpeg" alt="Elegant Glass Dropper Bottles" class="img-back">
+                        <img src="https://i.pinimg.com/736x/ef/b2/4c/efb24cbc559511d1acf4758d7aeda016.jpg" alt="Serene Minimalist Interior" class="img-front">
+                        <img src="https://i.pinimg.com/736x/2f/e7/fa/2fe7faee1714498b52b997ad4fac492e.jpg" alt="Elegant Glass Dropper Bottles" class="img-back">
                     </div>
                     <!-- Image Pair 3 -->
                     <div class="image-container">
-                        <img src="https://framerusercontent.com/images/rox4QKJhhbkPtiKSD36oL2Dhrj8.jpeg" alt="Modern Minimalist Kitchen" class="img-front">
-                        <img src="https://framerusercontent.com/images/iiL0z78FdG5EeSqFkapc1nPKM.jpeg" alt="Contemplative Man in Hat" class="img-back">
+                        <img src="https://i.pinimg.com/736x/f1/af/f6/f1aff62ffa3386bdd7ac4cb415250582.jpg" alt="Modern Minimalist Kitchen" class="img-front">
+                        <img src="https://i.pinimg.com/736x/4d/ac/31/4dac31907cec640ec51c111aeea3d046.jpg" alt="Contemplative Man in Hat" class="img-back">
                     </div>
                     <!-- Image Pair 4 -->
                     <div class="image-container">
-                        <img src="https://framerusercontent.com/images/0Y5dLXOw24YXzYFZU4E7VLVb1pw.jpeg" alt="Minimalist Fashion Look" class="img-front">
-                        <img src="https://framerusercontent.com/images/EdXMPSaxTDaDCUY5OYJ5EmcdqbM.jpeg" alt="Minimalist Interior with Staircase" class="img-back">
+                        <img src="https://i.pinimg.com/736x/ff/c8/2a/ffc82a1626f215df28313272d3db5c58.jpg" alt="Minimalist Fashion Look" class="img-front">
+                        <img src="https://i.pinimg.com/736x/bf/ac/5b/bfac5b72b8f8497c8d052fd7c846c07c.jpg" alt="Minimalist Interior with Staircase" class="img-back">
                     </div>
                     <!-- Image Pair 5 -->
                     <div class="image-container">
-                        <img src="https://framerusercontent.com/images/AlCSDEz5Qo20KzcbCw2WCooWC4.jpeg" alt="Minimalist Perfume Scene" class="img-front">
-                        <img src="https://framerusercontent.com/images/FvLq9vcRfOUVoCC7txtWbWvHty4.jpeg" alt="Minimalist Skincare Arrangement" class="img-back">
+                        <img src="https://i.pinimg.com/736x/f1/94/f3/f194f382a37d89cb7a09d11c35a3cf05.jpg" alt="Minimalist Perfume Scene" class="img-front">
+                        <img src="https://i.pinimg.com/736x/4e/fb/02/4efb020a8cd1ea7c73eb26bc663133d9.jpg" alt="Minimalist Skincare Arrangement" class="img-back">
                     </div>
                     <!-- Image Pair 6 -->
                     <div class="image-container">
-                        <img src="https://framerusercontent.com/images/tj3ikl2RgG7ScvnfpWMAXcULc.jpeg" alt="Woman Running Outdoors" class="img-front">
-                        <img src="https://framerusercontent.com/images/fygSgZa0uPr6Y8XEICHCJZhZSc.jpeg" alt="Stylish Sunglasses Display" class="img-back">
+                        <img src="https://i.pinimg.com/736x/5d/4e/5d/5d4e5d31a3758c9d615f1041c4607457.jpg" alt="Woman Running Outdoors" class="img-front">
+                        <img src="https://i.pinimg.com/736x/f9/40/2c/f9402c318179e439db3b5bdc3aec50e3.jpg" alt="Stylish Sunglasses Display" class="img-back">
                     </div>
                 </div>
             </div>
