--- a/customer.html
+++ b/customer.html
@@ -567,7 +567,7 @@
         /* --- Download Section Styles --- */
         .download-section {
             width: 100%;
-            padding: 140px 40px;
+            padding: 10px 40px 200px 40px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -835,7 +835,7 @@
 
             /* Download Section */
             .download-section { 
-                padding: 80px 24px; 
+                padding: 10px 24px; 
             }
             
             .download-container { 
@@ -1013,7 +1013,7 @@
 
     <!-- Gallery Section -->
     <section class="gallery-section">
-        <h2>Explore Our <span class="serif">Gallery</span></h2>
+        <h2>Explore Your <span class="serif">Gallery</span></h2>
 
         <div class="gallery-carousel" id="carousel-container">
             <div class="carousel-track" id="track">
