--- a/player.html
+++ b/player.html
@@ -209,7 +209,7 @@
         @media (min-width: 768px) {
             .auth-buttons {
                 display: flex;
-            align-items: center;
+                align-items: center;
                 gap: 1rem;
             }
         }
@@ -1121,12 +1121,12 @@
             .text-content {
                 text-align: center;
                 margin-bottom: 0;
-                order: 2;
+                order: 1;
             }
 
             .image-stack-container {
                 height: 300px;
-                order: 1;
+                order: 2;
             }
 
             .text-content h2 {
@@ -1153,7 +1153,7 @@
             .skeleton-text-content {
                 width: 100%;
                 text-align: center;
-                order: 2;
+                order: 1;
             }
 
             .skeleton-text-line.short,
@@ -1169,7 +1169,7 @@
             .skeleton-image-stack {
                 width: 100%;
                 height: 300px;
-                order: 1;
+                order: 2;
             }
 
             .skeleton-stack-1 {
@@ -1826,19 +1826,21 @@
                                 galleryImg1.src = extraImages[0];
                                 galleryImg1.classList.remove('hidden');
                                 galleryImg1.style.opacity = '1';
-                                galleryImg1.addEventListener('click', () => {
-                                    console.log('Opening download section image 1');
-                                    openModal(7);
-                                });
+                                // Remove click event listeners from download section images
+                                // galleryImg1.addEventListener('click', () => {
+                                //     console.log('Opening download section image 1');
+                                //     openModal(7);
+                                // });
                             }
                             if (extraImages[1]) {
                                 galleryImg2.src = extraImages[1];
                                 galleryImg2.classList.remove('hidden');
                                 galleryImg2.style.opacity = '1';
-                                galleryImg2.addEventListener('click', () => {
-                                    console.log('Opening download section image 2');
-                                    openModal(8);
-                                });
+                                // Remove click event listeners from download section images
+                                // galleryImg2.addEventListener('click', () => {
+                                //     console.log('Opening download section image 2');
+                                //     openModal(8);
+                                // });
                             }
                         }
 
