--- a/admin.html
+++ b/admin.html
@@ -440,6 +440,7 @@
             padding: 2rem;
             margin-bottom: 2rem;
             border: 1px solid var(--border-color);
+            overflow: hidden; /* Prevent content from overflowing */
         }
 
         .form-title {
@@ -520,17 +521,20 @@
             background: var(--primary-bg);
             border: 1px solid var(--border-color);
             border-radius: 8px;
-            padding: 1rem;
+            padding: 0.75rem;
             display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
+            align-items: center;
+            gap: 0.75rem;
+            min-width: 0; /* Important for text truncation */
+            overflow: hidden; /* Prevent content from overflowing */
         }
 
         .file-info {
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            min-width: 0; /* This is important for text truncation */
+            flex: 1;
+            min-width: 0; /* This is critical for text truncation */
         }
 
         .file-name {
@@ -541,14 +545,14 @@
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
-            min-width: 0; /* This is important for text truncation */
+            min-width: 0; /* This is critical for text truncation */
         }
 
         .status-and-actions {
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            flex-shrink: 0;
+            flex-shrink: 0; /* Prevent this from shrinking */
         }
 
         .status-icon {
@@ -560,6 +564,7 @@
             justify-content: center;
             color: white;
             font-size: 0.8rem;
+            flex-shrink: 0; /* Prevent from shrinking */
         }
 
         .status-icon.success {
@@ -578,6 +583,7 @@
             padding: 4px;
             border-radius: 4px;
             transition: var(--transition);
+            flex-shrink: 0; /* Prevent from shrinking */
         }
 
         .delete-btn:hover {
@@ -591,6 +597,7 @@
             background-color: var(--border-color);
             border-radius: 2px;
             overflow: hidden;
+            margin-top: 0.5rem;
         }
 
         .progress-bar {
@@ -916,6 +923,7 @@
 
             .form-wrapper {
                 padding: 1.5rem;
+                overflow: visible; /* Allow content to be visible but contained */
             }
 
             .form-title {
@@ -962,6 +970,7 @@
 
             #image-preview-container {
                 grid-template-columns: 1fr;
+                gap: 0.75rem;
             }
 
             .footer-section {
@@ -979,11 +988,14 @@
                 align-items: center;
                 padding: 0.75rem;
                 gap: 0.75rem;
+                width: 100%;
+                box-sizing: border-box;
             }
 
             .file-info {
                 flex: 1;
                 min-width: 0;
+                overflow: hidden;
             }
 
             .file-name {
@@ -991,6 +1003,8 @@
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
+                flex: 1;
+                min-width: 0;
             }
 
             .status-and-actions {
@@ -1019,6 +1033,16 @@
                 font-size: 28px;
                 width: 52px;
                 height: 52px;
+            }
+            
+            /* Make image preview cards even more compact */
+            .image-preview-card {
+                padding: 0.6rem;
+                gap: 0.6rem;
+            }
+            
+            .file-name {
+                font-size: 0.8rem;
             }
         }
     </style>
