--- a/admin.html
+++ b/admin.html
@@ -1219,7 +1219,7 @@
 
         const firebaseConfig = {
             apiKey: "AIzaSyB-u3L7Jz3gEfXmfP7-XQfPnI2CwpJM_Vs",
-            authDomain: "harsha-demo01.firebaseapp.com",
+            authDomain: "photography.wixo.in",
             projectId: "harsha-demo01",
             storageBucket: "harsha-demo01.firebasestorage.app",
             messagingSenderId: "676891713475",
