--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
         overflow-y: auto;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
     }
 
     .mobile-nav-links {
@@ -325,11 +326,11 @@
         background-color: #f8f9fa;
     }
     
-    .mobile-menu-auth {
-        flex-shrink: 0;
-        padding-top: 20px;
-        margin-top: auto; /* Push to bottom */
-    }
+.mobile-menu-auth {
+    flex-shrink: 0;
+    padding-top: 20px;
+    margin-top: auto; /* Keep this */
+}
 
     .mobile-menu-auth-buttons {
         display: flex;
