--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
         z-index: 1002; /* Increased z-index */
         display: flex;
         flex-direction: column;
+        overflow-y: auto;
     }
 
     #mobileMenu.active {
@@ -297,11 +298,12 @@
     }
 
 .mobile-menu-content {
-    flex: 1; /* Change from flex-grow: 1 */
+    flex-grow: 1;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    overflow-y: auto; /* Move overflow here */
+    justify-content: space-between; /* Add this */
+    min-height: 0; /* Add this for proper flexbox behavior */
 }
 
     .mobile-nav-links {
@@ -328,7 +330,8 @@
 .mobile-menu-auth {
     flex-shrink: 0;
     padding-top: 20px;
-    margin-top: auto; /* Keep this */
+    margin-top: auto; /* Push to bottom */
+    padding-bottom: 20px; /* Add some bottom padding */
 }
 
     .mobile-menu-auth-buttons {
