--- a/gallary.html
+++ b/gallary.html
@@ -1339,7 +1339,9 @@
     </div>
 
     <!-- The lower-half is the main footer area -->
-    <div class="lower-half">
+    <div class="lower-half" style="
+    padding-top: 170px;
+">
         <div class="footer-bottom">
             <div class="footer-logo-area">
                 <!-- UPDATED LOGO -->
