--- a/gallery.html
+++ b/gallery.html
@@ -728,7 +728,7 @@
         .view-more-btn:hover svg {
             transform: translateX(5px);
         }
- 
+
         /* --- Footer Styles --- */
         .upper-half {
             background-color: #f8f9fa;
@@ -1339,9 +1339,7 @@
     </div>
 
     <!-- The lower-half is the main footer area -->
-    <div class="lower-half" style="
-    padding-top: 170px;
-">
+    <div class="lower-half">
         <div class="footer-bottom">
             <div class="footer-logo-area">
                 <!-- UPDATED LOGO -->
