--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@
         transform: translateX(0);
     }
 
-   #menuOverlay {
+    /* FIXED: Menu overlay - only covers content, not the menu */
+#menuOverlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -331,7 +332,7 @@
     flex-shrink: 0;
     padding-top: 20px;
     margin-top: auto; /* Push to bottom */
-    padding-bottom: 80px; /* Add some bottom padding */
+    padding-bottom: 20px; /* Add some bottom padding */
 }
 
     .mobile-menu-auth-buttons {
@@ -1585,7 +1586,7 @@
 
     .lower-half {
         background-color: #012726;
-        padding: 120px 20px 40px 20px; /* Reduced padding for mobile */
+        padding: 260px 20px 40px 20px; /* Reduced padding for mobile */
     }
     
     .subscribe-card {
@@ -1841,7 +1842,7 @@
         }
         .upper-half { padding-top: 60px; padding-bottom: 280px; }
         .lower-half { 
-            padding-top: 320px; 
+            padding-top: 340px; 
             padding-left: 20px; 
             padding-right: 20px; 
             padding-bottom: 40px; 
