--- a/index.html
+++ b/index.html
@@ -2115,7 +2115,7 @@
             <nav class="nav">
                 <div class="nav-left">
                     <a href="/">
-                        <img class="logo" src="https://ihtnas.com/assets/ihtnas-nav.png" alt="Gayathri Digitals Logo">
+                        <img class="logo" src="https://photography-harsha.netlify.app/yellow.png" alt="Gayathri Digitals Logo">
                     </a>
                     <div class="nav-links">
                         <a class="nav-link" href="/home">Home</a>
