--- a/ecom.html
+++ b/ecom.html
@@ -572,13 +572,13 @@
             <!-- Slide 1 -->
             <div class="carousel-slide active" role="group" aria-roledescription="slide" aria-label="1 of 4">
                 <img 
-                    src="data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1200' height='800' viewBox='0 0 1200 800'%3E%3Crect fill='%23dbeafe' width='1200' height='800'/%3E%3Ccircle fill='%2393c5fd' cx='400' cy='400' r='200'/%3E%3C/svg%3E" 
+                    src="https://www.shauryasanadhya.com/cdn/shop/files/3rd_Banner_1.jpg?v=1757699591&width=1920" 
                     alt="Premium Wireless Headphones"
                     class="slide-image desktop-image"
                     loading="lazy"
                 >
                 <img 
-                    src="data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='600' height='800' viewBox='0 0 600 800'%3E%3Crect fill='%23dbeafe' width='600' height='800'/%3E%3Ccircle fill='%2393c5fd' cx='300' cy='400' r='150'/%3E%3C/svg%3E" 
+                    src="https://www.shauryasanadhya.com/cdn/shop/files/Mask_group_7_1.png?height=1164&v=1757699780" 
                     alt="Premium Wireless Headphones"
                     class="slide-image mobile-image"
                     loading="lazy"
@@ -586,48 +586,48 @@
             </div>
 
             <!-- Slide 2 -->
-            <div class="carousel-slide" role="group" aria-roledescription="slide" aria-label="2 of 4">
+            <div class="carousel-slide active" role="group" aria-roledescription="slide" aria-label="2 of 4">
                 <img 
-                    src="data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1200' height='800' viewBox='0 0 1200 800'%3E%3Crect fill='%23fce7f3' width='1200' height='800'/%3E%3Crect fill='%23f9a8d4' x='300' y='200' width='600' height='400' rx='20'/%3E%3C/svg%3E" 
-                    alt="Smart Fitness Watch"
+                    src="https://www.shauryasanadhya.com/cdn/shop/files/3rd_Banner_1.jpg?v=1757699591&width=1920" 
+                    alt="Premium Wireless Headphones"
                     class="slide-image desktop-image"
                     loading="lazy"
                 >
                 <img 
-                    src="data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='600' height='800' viewBox='0 0 600 800'%3E%3Crect fill='%23fce7f3' width='600' height='800'/%3E%3Crect fill='%23f9a8d4' x='150' y='250' width='300' height='300' rx='15'/%3E%3C/svg%3E" 
-                    alt="Smart Fitness Watch"
+                    src="https://www.shauryasanadhya.com/cdn/shop/files/Mask_group_7_1.png?height=1164&v=1757699780" 
+                    alt="Premium Wireless Headphones"
                     class="slide-image mobile-image"
                     loading="lazy"
                 >
             </div>
 
             <!-- Slide 3 -->
-            <div class="carousel-slide" role="group" aria-roledescription="slide" aria-label="3 of 4">
+            <div class="carousel-slide active" role="group" aria-roledescription="slide" aria-label="3 of 4">
                 <img 
-                    src="data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1200' height='800' viewBox='0 0 1200 800'%3E%3Crect fill='%23fef3c7' width='1200' height='800'/%3E%3Cpolygon fill='%23f59e0b' points='600,200 800,600 400,600'/%3E%3C/svg%3E" 
-                    alt="Ultra-Thin Laptop"
+                    src="https://www.shauryasanadhya.com/cdn/shop/files/3rd_Banner_1.jpg?v=1757699591&width=1920" 
+                    alt="Premium Wireless Headphones"
                     class="slide-image desktop-image"
                     loading="lazy"
                 >
                 <img 
-                    src="data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='600' height='800' viewBox='0 0 600 800'%3E%3Crect fill='%23fef3c7' width='600' height='800'/%3E%3Cpolygon fill='%23f59e0b' points='300,250 450,550 150,550'/%3E%3C/svg%3E" 
-                    alt="Ultra-Thin Laptop"
+                    src="https://www.shauryasanadhya.com/cdn/shop/files/Mask_group_7_1.png?height=1164&v=1757699780" 
+                    alt="Premium Wireless Headphones"
                     class="slide-image mobile-image"
                     loading="lazy"
                 >
             </div>
 
             <!-- Slide 4 -->
-            <div class="carousel-slide" role="group" aria-roledescription="slide" aria-label="4 of 4">
+            <div class="carousel-slide active" role="group" aria-roledescription="slide" aria-label="4 of 4">
                 <img 
-                    src="data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1200' height='800' viewBox='0 0 1200 800'%3E%3Crect fill='%23dcfce7' width='1200' height='800'/%3E%3Cellipse fill='%2386efac' cx='600' cy='400' rx='250' ry='150'/%3E%3C/svg%3E" 
-                    alt="Wireless Earbuds"
+                    src="https://www.shauryasanadhya.com/cdn/shop/files/3rd_Banner_1.jpg?v=1757699591&width=1920" 
+                    alt="Premium Wireless Headphones"
                     class="slide-image desktop-image"
                     loading="lazy"
                 >
                 <img 
-                    src="data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='600' height='800' viewBox='0 0 600 800'%3E%3Crect fill='%23dcfce7' width='600' height='800'/%3E%3Cellipse fill='%2386efac' cx='300' cy='400' rx='150' ry='100'/%3E%3C/svg%3E" 
-                    alt="Wireless Earbuds"
+                    src="https://www.shauryasanadhya.com/cdn/shop/files/Mask_group_7_1.png?height=1164&v=1757699780" 
+                    alt="Premium Wireless Headphones"
                     class="slide-image mobile-image"
                     loading="lazy"
                 >
